--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,46 @@
         <module>dataease-extensions-datasource</module>
     </modules>
 
+    <distributionManagement>
+        <repository>
+            <id>release</id>
+            <name>release version</name>
+            <url>http://192.168.0.40:8081/repository/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>snapshots version</name>
+            <url>http://192.168.0.40:8081/repository/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+                <version>1.1.0</version>
+                <configuration>
+                    <updatePomFile>true</updatePomFile>
+                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>flatten</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>flatten</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>flatten.clean</id>
+                        <phase>clean</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
